--- a/.gitattributes
+++ b/.gitattributes
@@ -33,3 +33,7 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.zst filter=lfs diff=lfs merge=lfs -text
 *tfevents* filter=lfs diff=lfs merge=lfs -text
+assets/demo.png filter=lfs diff=lfs merge=lfs -text
+assets/kick.wav filter=lfs diff=lfs merge=lfs -text
+assets/siteOGImage.webp filter=lfs diff=lfs merge=lfs -text
+assets/snare.wav filter=lfs diff=lfs merge=lfs -text
