Fix Python socket error by switching to Node.js dev server

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "dev": "python -m http.server 8000",
-    "start": "python -m http.server 8000"
+    "dev": "npx serve -s . -l 8000",
+    "start": "npx serve -s . -l 8000"
   },
   "keywords": [
     "dj",
