Fix Git LFS tracking for missing audio files

--- a/.gitattributes
+++ b/.gitattributes
@@ -37,3 +37,5 @@ assets/demo.png filter=lfs diff=lfs merge=lfs -text
 assets/kick.wav filter=lfs diff=lfs merge=lfs -text
 assets/siteOGImage.webp filter=lfs diff=lfs merge=lfs -text
 assets/snare.wav filter=lfs diff=lfs merge=lfs -text
+assets/hihat.wav filter=lfs diff=lfs merge=lfs -text
+assets/clap.wav filter=lfs diff=lfs merge=lfs -text
